fixed alignemnts

--- a/templates/default/less/Services/OnScreenChat/delos.less
+++ b/templates/default/less/Services/OnScreenChat/delos.less
@@ -114,6 +114,24 @@
 			display:inline-block;
 		}
 
+		.osc_truncate_username_left{
+			width: 80px;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			display:inline-block;
+			margin-bottom:-5px;
+			text-align:right;
+		}
+
+		.osc_truncate_username_right{
+			width: 80px;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			display:inline-block;
+		}
+
 		.chat {
 			list-style: none;
 			margin: 0;
@@ -126,11 +144,6 @@
 				.chat-body {
 					.header strong {
 						font-size: 0.8em;
-						width: 150px;
-						white-space: nowrap;
-						overflow: hidden;
-						text-overflow: ellipsis;
-						display:inline-block;
 					}
 
 					p {
